fixed dissolve newline being ignored bug & scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,24 @@
   --font-mono: "IBM Plex Mono", monospace;
 }
 
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* IE and Edge */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+  }
+
+  /* Firefox */
+  .no-scrollbar {
+    scrollbar-width: none;
+  }
+}
+
+
 @layer base {
   html {
     font-family: var(--font-mono);
